--- a/deploy/olm-catalog/ibm-helm-repo-operator/3.6.2/ibm-helm-repo-operator.v3.6.2.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/ibm-helm-repo-operator/3.6.2/ibm-helm-repo-operator.v3.6.2.clusterserviceversion.yaml
@@ -69,7 +69,7 @@ metadata:
     capabilities: Seamless Upgrades
     categories: Developer Tools
     certified: "false"
-    containerImage: quay.io/opencloudio/ibm-helm-repo-operator:latest
+    containerImage: quay.io/opencloudio/ibm-helm-repo-operator:dev
     createdAt: "2020-05-16"
     description: Helm Repo is a helm chart repository for storing and supplying IBM
       and local charts.
@@ -235,7 +235,7 @@ spec:
                 - name: OPERAND_AUDIT_SERVICE_IMAGE
                   value: quay.io/opencloudio/icp-audit-service@sha256:24a220374c39652f8b031637d852995bfaec5be2601f9e4c41eb1925531f466d
                 - name: OPERAND_HELM_REPO_IMAGE
-                  value: quay.io/opencloudio/icp-helm-repo@sha256:84f670d9d51634da63d7a13eff8a1f574e45c98af818c76bcc4d54673c5f4aa2
+                  value: quay.io/opencloudio/icp-helm-repo@sha256:85c4a66efc7eabf2a7cca18730362b2dc2731edd061983948f73757eb3af21fa
                 image: quay.io/opencloudio/ibm-helm-repo-operator:latest
                 imagePullPolicy: Always
                 name: ibm-helm-repo-operator
